--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     <div id="alcohol_level" class="value">載入中...</div>
   </div>
 
+  <div id="video-block" class="data-block">
+    <div class="label">即時影像：</div>
+    <img id="video-stream" src="https://fatigue-m68t.onrender.com/video_feed" width="400" />
+  </div>
+
   <div id="error-message" class="error"></div>
 
   <script>
