--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <div id="video-block" class="data-block">
     <div class="label">即時影像：</div>
-    <img id="video-stream" src="https://fatigue-m68t.onrender.com/video_feed" width="400" />
+    <iframe id="video-stream" src="https://fatigue-m68t.onrender.com/video_feed" width="400"></iframe>
   </div>
 
   <div id="error-message" class="error"></div>
