--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       try {
         const response = await fetch('https://fatigue-m68t.onrender.com/get_dataClass', { method: 'GET' });
         const data = await response.json();
+        console.log(data);
 
         if (data.error) {
           document.getElementById('error-message').innerText = '❌ ' + data.error;
