--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         }
 
         document.getElementById('fatigue').innerText = (data.fatigue.fatigue_score ?? '-') + ' 分';
-        document.getElementById('heart_rate').innerText = (data.heart.heart_rate ?? '-') + ' 次/分';
-        document.getElementById('alcohol_level').innerText = (data.alcohol.alcohol_level ?? '-') + ' 度';
+        document.getElementById('heart_rate').innerText = (data.heart.bpm_average ?? '-') + ' 次/分';
+        document.getElementById('alcohol_level').innerText = (data.alcohol.alcohol_value ?? '-') + ' 度';
         document.getElementById('error-message').innerText = '';
       } catch (error) {
         document.getElementById('error-message').innerText = '❌ 無法取得資料，請稍後再試。';
