--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    async function fetchFatigueData() {
       try {
         const response = await fetch('https://fatigue-m68t.onrender.com/get_dataClass', { method: 'GET' });
-        const data = await response.json();
+        const data = await response.json().data;
         console.log(data);
 
         if (data.error) {
