--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
    async function fetchFatigueData() {
       try {
         const response = await fetch('https://fatigue-m68t.onrender.com/get_dataClass', { method: 'GET' });
-        const data = await response.json().data;
+        const data = await response.json();
         console.log(data);
 
-        if (data.error) {
+        if (data.success === false) {
           document.getElementById('error-message').innerText = '❌ ' + data.error;
           document.getElementById('fatigue').innerText = '-';
           document.getElementById('heart_rate').innerText = '-';
           document.getElementById('alcohol_level').innerText = '-';
           return;
         }
-
-        document.getElementById('fatigue').innerText = (data.fatigue.fatigue_score ?? '-') + ' 分';
-        document.getElementById('heart_rate').innerText = (data.heart.bpm_average ?? '-') + ' 次/分';
-        document.getElementById('alcohol_level').innerText = (data.alcohol.alcohol_value ?? '-') + ' 度';
+        var sensor_data = data.data;
+        document.getElementById('fatigue').innerText = (sensor_data.fatigue.fatigue_score ?? '-') + ' 分';
+        document.getElementById('heart_rate').innerText = (sensor_data.heart.bpm_average ?? '-') + ' 次/分';
+        document.getElementById('alcohol_level').innerText = (sensor_data.alcohol.alcohol_value ?? '-') + ' 度';
         document.getElementById('error-message').innerText = '';
       } catch (error) {
-        document.getElementById('error-message').innerText = '❌ 無法取得資料，請稍後再試。';
+        document.getElementById('error-message').innerText = '❌ 無法取得資料，請稍後再試。\n' + error.message;
         document.getElementById('fatigue').innerText = '-';
         document.getElementById('heart_rate').innerText = '-';
         document.getElementById('alcohol_level').innerText = '-';
